Updated file management

--- a/cluster_analysis/0.5gcc_1000K_3B_graphs/0.5gcc_1000K_morse_3B_graphs/R_0.5gcc_1000k_3b.ipynb
+++ b/cluster_analysis/0.5gcc_1000K_3B_graphs/0.5gcc_1000K_morse_3B_graphs/R_0.5gcc_1000k_3b.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "fadc0db1",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "76b1ae1b",
    "metadata": {},
    "outputs": [],
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "f0d06aec",
    "metadata": {},
    "outputs": [
@@ -125,7 +125,7 @@
        "       [-0.979391, -0.458603, -0.437833]])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,10 +134,13 @@
     "# Create an empty list to store arrays from each file\n",
     "data_list = []\n",
     "\n",
+    "# Specify the directory\n",
+    "directory = \"0.5gcc_1000k_3bS/\"\n",
+    "\n",
     "# Loop over the range of integers from 50 to 74\n",
     "for i in range(50, 75):\n",
     "    # Generate the filename\n",
-    "    filename = f'00{i}.3b_clu-s.txt'\n",
+    "    filename = f'{directory}00{i}.3b_clu-s.txt'\n",
     "    \n",
     "    try:\n",
     "        # Read the data from the file and append it to the list\n",
@@ -224,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "c3ba5b33",
    "metadata": {},
    "outputs": [
@@ -266,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "0d26d303",
    "metadata": {},
    "outputs": [
@@ -305,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "5c5bd4fd",
    "metadata": {},
    "outputs": [
@@ -326,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "2b5033ad",
    "metadata": {},
    "outputs": [
@@ -452,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "638adaf6",
    "metadata": {},
    "outputs": [
@@ -490,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "cd803363",
    "metadata": {},
    "outputs": [
@@ -520,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "6bc62318",
    "metadata": {},
    "outputs": [
@@ -561,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "e867d5b7",
    "metadata": {},
    "outputs": [
@@ -687,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "681c2c84",
    "metadata": {},
    "outputs": [
@@ -725,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "9e439f7d",
    "metadata": {},
    "outputs": [
@@ -794,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "227a773b",
    "metadata": {},
    "outputs": [
@@ -838,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "add4885e",
    "metadata": {},
    "outputs": [
@@ -1130,7 +1133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "ea60de43",
    "metadata": {},
    "outputs": [
