Updated confusion matrix

--- a/dissimilarity_clustering/data_clustering.ipynb
+++ b/dissimilarity_clustering/data_clustering.ipynb
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +570,56 @@
     "plt.title('Dendrogram: 4B P(d) Avgs.')\n",
     "plt.xticks(rotation='vertical')\n",
     "plt.ylabel('Distance')\n",
-    "plt.show()"
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from scipy.cluster.hierarchy import fcluster\n",
+    "from scipy.spatial.distance import euclidean\n",
+    "from sklearn.metrics import accuracy_score\n",
+    " \n",
+    "with open(\"2b_avg_pd_equilibrium\", 'rb') as pickle_file:\n",
+    "    avg_pd_2b = pickle.load(pickle_file)\n",
+    " \n",
+    "with open(\"3b_avg_pd_equilibrium\", 'rb') as pickle_file:\n",
+    "    avg_pd_3b = pickle.load(pickle_file)\n",
+    " \n",
+    "print(np.shape(avg_pd_2b))\n",
+    " \n",
+    "# Combine the arrays along the second axis (axis=1)\n",
+    "combined_array = np.concatenate((avg_pd_2b, avg_pd_3b), axis=1)\n",
+    " \n",
+    "# Verify the shape of the combined array\n",
+    "print(combined_array.shape)  # Output will be (12, 180, 1)\n",
+    " \n",
+    "# Reshape the array to (12, 60) before creating the DataFrame\n",
+    "reshaped_data = np.array(combined_array).reshape(12, 120)\n",
+    " \n",
+    "# Create a DataFrame\n",
+    "df = pd.DataFrame(reshaped_data)\n",
+    " \n",
+    "# Hierarchical clustering\n",
+    "linkage_matrix = linkage(df, method='median')  # You can choose a different linkage method\n",
+    " \n",
+    "# Plot the dendrogram with labeled points\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "dendrogram(linkage_matrix, labels=df.index, orientation='top', distance_sort='descending', leaf_label_func=lambda x: replace_labels(x, sp_labels))\n",
+    "plt.title('Dendrogram: 2B+3B P(d) Avgs.')\n",
+    "plt.xticks(rotation='vertical')\n",
+    "plt.ylabel('Distance')\n",
+    "plt.show()\n",
+    " \n",
+    "# Step 1: Choose a threshold distance to form clusters\n",
+    "threshold_distance = 0.005  # Adjust this based on your data and clustering objectives\n",
+    "# Step 2: Compute cluster labels using the threshold distance\n",
+    "cluster_labels = fcluster(linkage_matrix, threshold_distance, criterion='distance')\n",
+    "print(cluster_labels) # Confirm there are 12 unique clusters"
    ]
   },
   {
@@ -731,7 +780,19 @@
     "print(\"Accuracy:\", accuracy)\n",
     "\n",
     "cm = confusion_matrix(arr_labels, closest_clusters)\n",
-    "disp = ConfusionMatrixDisplay(confusion_matrix=cm)\n",
+    "\n",
+    "# Define the new order of indices for visualization\n",
+    "new_order = [7, 0, 8, 9, 1, 2, 3, 4, 10, 11, 5, 6]\n",
+    " \n",
+    "# Reorder rows and columns of the confusion matrix\n",
+    "reordered_cm = cm[new_order][:, new_order]\n",
+    " \n",
+    "# Sort the sp_labels dictionary based on the new_order\n",
+    "sorted_sp_labels = {k: sp_labels[k] for k in sorted(sp_labels, key=lambda x: new_order.index(x))}\n",
+    " \n",
+    "# Plot confusion matrix\n",
+    "disp = ConfusionMatrixDisplay(confusion_matrix=reordered_cm,\n",
+    "                               display_labels=[sorted_sp_labels[i] for i in sorted_sp_labels.keys()])\n",
     "disp.plot()\n",
     "plt.title(\"Equilibrium Clustering\")\n",
     "plt.show()"
@@ -809,7 +870,20 @@
     "print(\"Accuracy:\", accuracy)\n",
     "\n",
     "cm = confusion_matrix(arr_labels, closest_clusters)\n",
-    "disp = ConfusionMatrixDisplay(confusion_matrix=cm)\n",
+    "\n",
+    "# Define the new order of indices for visualization\n",
+    "new_order = [7, 0, 8, 9, 1, 2, 3, 4, 10, 11, 5, 6]\n",
+    " \n",
+    "# Reorder rows and columns of the confusion matrix\n",
+    "reordered_cm = cm[new_order][:, new_order]\n",
+    " \n",
+    "# Sort the sp_labels dictionary based on the new_order\n",
+    "sorted_sp_labels = {k: sp_labels[k] for k in sorted(sp_labels, key=lambda x: new_order.index(x))}\n",
+    " \n",
+    "# Plot confusion matrix\n",
+    "disp = ConfusionMatrixDisplay(confusion_matrix=reordered_cm,\n",
+    "                               display_labels=[sorted_sp_labels[i] for i in sorted_sp_labels.keys()])\n",
+    "\n",
     "disp.plot()\n",
     "plt.title(\"All Clustering\")\n",
     "plt.show()"
