--- a/cluster_analysis/0.5gcc_1000K_3B_graphs/0.5gcc_1000K_3B_graphs/umap_3bs.ipynb
+++ b/cluster_analysis/0.5gcc_1000K_3B_graphs/0.5gcc_1000K_3B_graphs/umap_3bs.ipynb
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -361,14 +361,20 @@
       " [1.2715739 3.9800558 4.8026295]\n",
       " [1.2410978 1.3259761 2.5846343]\n",
       " [2.5210567 2.616112  4.8618584]]\n",
-      "Number of Clusters:  6\n"
+      "Number of Clusters:  6\n",
+      "3.7773414 4.285099 4.52995\n",
+      "2.5198486 4.1369004 4.4905887\n",
+      "1.3052776 2.5364828 3.7785385\n",
+      "1.2715739 3.9800558 4.8026295\n",
+      "1.2410978 1.3259761 2.5846343\n",
+      "2.5210567 2.616112 4.8618584\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/qt/6k9t6mfn12l30tsrj8hnl6wh0000gs/T/ipykernel_2489/1009664483.py:11: RuntimeWarning: invalid value encountered in sqrt\n",
+      "/var/folders/qt/6k9t6mfn12l30tsrj8hnl6wh0000gs/T/ipykernel_2489/26126812.py:11: RuntimeWarning: invalid value encountered in sqrt\n",
       "  C_y = float(np.sqrt(b**2 - C_x**2)) # square root\n"
      ]
     },
@@ -410,6 +416,7 @@
     "\n",
     "for row in inv_transformed_points:\n",
     "    a, b, c = row\n",
+    "    print(a,b,c)\n",
     "    coords = coordinates_of_triangle_given_SSS(a, b, c)\n",
     "    edge_color = (0.5, 0.5, 0.5, 0.5)  # RGBA tuple for transparent grey\n",
     "    p = Polygon(coords, edgecolor=edge_color, facecolor='none')\n",
