--- a/dissimilarity_clustering/tsr_manhat_multipleDescriptor.ipynb
+++ b/dissimilarity_clustering/tsr_manhat_multipleDescriptor.ipynb
@@ -345,8 +345,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.         0.42255571 0.44224512 ... 1.76637985 1.80654152 1.78103057]\n",
-      " [0.42255571 0.         0.10336075 ... 1.55630838 1.59632321 1.57271221]\n",
+      "[[0.         0.4225557  0.44224512 ... 1.76637985 1.80654152 1.78103057]\n",
+      " [0.4225557  0.         0.10336075 ... 1.55630838 1.59632321 1.57271221]\n",
       " [0.44224512 0.10336075 0.         ... 1.53187806 1.57002412 1.54862714]\n",
       " ...\n",
       " [1.76637985 1.55630838 1.53187806 ... 0.         0.11935155 0.05125147]\n",
@@ -362,12 +362,22 @@
     "    # Compute statistics for training set\n",
     "    phi1_fingerprint = phi1.iloc[:-4]\n",
     "    phi1_fingerprint.to_numpy()\n",
+    "    phi1_2b = phi1_fingerprint[:60]\n",
+    "    phi1_3b = phi1_fingerprint[60:120]\n",
+    "    phi1_4b = phi1_fingerprint[120:]\n",
     "\n",
     "    # Compute statistics for phi2\n",
     "    phi2_fingerprint = phi2.iloc[:-4]\n",
     "    phi2_fingerprint.to_numpy()\n",
+    "    phi2_2b = phi2_fingerprint[:60]\n",
+    "    phi2_3b = phi2_fingerprint[60:120]\n",
+    "    phi2_4b = phi2_fingerprint[120:]\n",
     "\n",
-    "    distance = np.linalg.norm((phi1_fingerprint - phi2_fingerprint), ord=1)\n",
+    "    distance_2b = np.linalg.norm((phi1_2b - phi2_2b), ord=1)\n",
+    "    distance_3b = np.linalg.norm((phi1_3b - phi2_3b), ord=1)\n",
+    "    distance_4b = np.linalg.norm((phi1_4b - phi2_4b), ord=1)\n",
+    "\n",
+    "    distance = distance_2b + distance_3b + distance_4b\n",
     "\n",
     "    return distance\n",
     "\n",
@@ -415,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -730,7 +740,7 @@
        "Text(0.5, 1.0, 'Training Set Optimization with Pij Matrix')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
