--- a/dissimilarity_clustering/tsr_manhat_multipleDescriptor.ipynb
+++ b/dissimilarity_clustering/tsr_manhat_multipleDescriptor.ipynb
@@ -24,7 +24,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current working directory: /Users/benjaminlaubach/Documents/GitHub/chimes_CGD-myLLFork/dissimilarity_clustering\n"
+      "Current working directory: /Users/blaubach/chimes_CGD-myLLFork/dissimilarity_clustering\n"
      ]
     }
    ],
@@ -340,21 +340,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0.         0.4225557  0.44224512 ... 1.76637985 1.80654152 1.78103057]\n",
-      " [0.4225557  0.         0.10336075 ... 1.55630838 1.59632321 1.57271221]\n",
-      " [0.44224512 0.10336075 0.         ... 1.53187806 1.57002412 1.54862714]\n",
-      " ...\n",
-      " [1.76637985 1.55630838 1.53187806 ... 0.         0.11935155 0.05125147]\n",
-      " [1.80654152 1.59632321 1.57002412 ... 0.11935155 0.         0.09027395]\n",
-      " [1.78103057 1.57271221 1.54862714 ... 0.05125147 0.09027395 0.        ]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Initialize the minimum occurrence count required\n",
     "def compute_pij(phi1, phi2):\n",
@@ -399,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -806,7 +792,7 @@
     "plt.axhline(y=24, color='red')\n",
     "plt.xlabel(\"Steps until Frame Addition\")\n",
     "plt.ylabel(\"Frame Index\")\n",
-    "plt.title(\"Training Set Optimization with Pij Matrix\")\n"
+    "plt.title(\"Training Set Optimization with ChIMES Dissimilarity Matrix\")\n"
    ]
   },
   {
@@ -833,7 +819,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
